[gd_scene load_steps=2 format=3 uid="uid://djsbueb8qteuw"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_rwcrx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwcrx")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 365.0
offset_top = -129.0
offset_right = 450.0
offset_bottom = -103.0
scale = Vector2(5, 5)
text = "BAD KITTY!"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 277.0
offset_right = 568.0
offset_bottom = 308.0
scale = Vector2(2, 2)
text = "Play!"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 536.0
offset_top = 404.0
offset_right = 599.0
offset_bottom = 435.0
text = "Credits"

[node name="ControlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 531.0
offset_top = 358.0
offset_right = 605.0
offset_bottom = 389.0
text = "Controls"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
